# ortools

./: .gitignore  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE.md  README.md  setup.cfg
examples/: dispersion_analysis.ini  dispersion_analysis_ballistic.ini  dispersion_analysis_threestage.ini  simple.ork  threestage.ork  wind_model.txt
src/ortools/: dispersion_analysis.py  utility.py
