[metadata]
name        = ortools
version     = 0.1
author      = Patrick Kappl
description = Tools and scripts for OpenRocket

[options]
packages    = find:
package_dir =
    =src
install_requires = 
    orhelper
    numpy
    matplotlib
    click
    configparser

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    diana = ortools.dispersion_analysis:cli
